[gd_scene load_steps=4 format=3 uid="uid://cf0gj60igg086"]

[ext_resource type="Theme" uid="uid://dw88p5q24f3k5" path="res://themes/card.tres" id="1_anwoi"]
[ext_resource type="Script" path="res://scripts/info_popup.gd" id="1_iem51"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_gc0xy"]
bg_color = Color(0.1024, 0.18944, 0.32, 0.560784)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[node name="InfoPopup" type="Panel"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -709.0
offset_bottom = -491.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_gc0xy")
script = ExtResource("1_iem51")

[node name="TypeLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 5.0
offset_top = 26.0
offset_right = 45.0
offset_bottom = 49.0
theme = ExtResource("1_anwoi")
text = "Type: "

[node name="Type" type="Label" parent="."]
layout_mode = 0
offset_left = 37.0
offset_top = 26.0
offset_right = 103.0
offset_bottom = 49.0
theme = ExtResource("1_anwoi")
text = "blank_type"

[node name="Name" type="Label" parent="."]
layout_mode = 0
offset_left = 5.0
offset_top = 3.0
offset_right = 56.0
offset_bottom = 26.0
theme = ExtResource("1_anwoi")
theme_type_variation = &"HeaderSmall"
text = "Blank Name"

[node name="Description" type="Label" parent="."]
layout_mode = 0
offset_left = 6.0
offset_top = 46.0
offset_right = 246.0
offset_bottom = 101.0
theme = ExtResource("1_anwoi")
text = "Lorem Ipsum Dolor es Lorem Ipsum Dolor es Lorem Ipsum Dolor es Lorem Ipsum Dolor es Lorem Ipsum Dolor es Lorem Ipsum Dolor es Lorem Ipsum Dolor es"
autowrap_mode = 2

[node name="TimerBefore" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="TimerAfter" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="TimerBefore" to="." method="_on_timer_before_timeout"]
[connection signal="timeout" from="TimerAfter" to="." method="_on_timer_after_timeout"]
